<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1_datalogger_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ttw2xk@virginia.edu">Trent Weiss</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>f1_datalogger_provider</depend>
  <depend>f1_datalogger_msgs</depend>
  <depend>image_tools</depend>
  <depend>laser_geometry</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
