#include(FindArmadillo)
if(MSVC)
	find_package(Armadillo REQUIRED HINTS "C:/Program Files/Armadillo/share/Armadillo/CMake")
  #  get_filename_component(ARMA_LIB_DIR_ ${ARMADILLO_LIBRARIES} DIRECTORY)
  #  set(ARMADILLO_INCLUDE_DIRS "${ARMA_LIB_DIR_}/../include")
else()	
	find_package(Armadillo REQUIRED)
endif()
message(STATUS "Found armadillo library: ${ARMADILLO_LIBRARIES}")
message(STATUS "Found armadillo includes: ${ARMADILLO_INCLUDE_DIRS}")
add_executable(${PROJECT_NAME}_arma_test arma_test.cpp)
target_include_directories(${PROJECT_NAME}_arma_test PRIVATE ${ARMADILLO_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME}_arma_test ${ARMADILLO_LIBRARIES})